packages/gatsby-theme-carbon/src/components/AnchorLinks/AnchorLinks.module.scss
.list {
  width: 100%;

  @include carbon--breakpoint('lg') {
    width: 66.67%;
  }
}

.list + * {
  margin-top: 80px;
}

.link {
  @include carbon--type-style('expressive-heading-03', true);
  position: relative;
  display: inline-block;
  transition: color $transition--base;
  color: $carbon--gray-100;
  text-decoration: none;
  margin-bottom: $spacing-03;
  margin-left: $spacing-06;

  &:hover {
    color: $interactive-01;

    &::before {
      color: $interactive-01;
    }
  }

  &:before {
    content: '\21B3'; //"↳"
    position: absolute;
    left: -$spacing-06;
    color: $interactive-02;
    transition: color $transition--base;
    cursor: pointer;
  }
}

.list--small .link {
  @include carbon--type-style('body-long-02');
  margin-bottom: 0;
}

.list-item {
  @include carbon--type-style('expressive-heading-03', true);
  width: auto;
  list-style: none;
  padding-left: 0;
  display: flex;
  align-items: center;
  margin-left: 0;

  &:before {
    display: none;
  }
}

// Multiple Columns
.multiple-columns {
  @include carbon--breakpoint('md') {
    column-count: 2;
  }
}

// dark background
:global(.container--dark) .link {
  color: $carbon--white-0;

  &:before {
    color: $carbon--white-0;
  }

  &:hover {
    color: $carbon--blue-40;

    &::before {
      color: $carbon--blue-40;
    }
  }
}

